k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fuenfgiebel
  namespace: fuenfgiebel
  labels:
    app.kubernetes.io/name: fuenfgiebel
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: fuenfgiebel
